sugar/tests/success/demand.mx
mk1 : ! 1, e : _|_
|- let u = demand mk1
in let () = u
in e
