sugar/tests/fail/tensor.mx
a : 1 |- let u,v = a in let () = u in v
